[package]
name = "bear-lib-terminal-sys"
description = "Pure BearLibTerminal FFI for Rust"
repository = "https://github.com/nabijaczleweli/BearLibTerminal-sys.rs"
readme = "README.md"
keywords = ["BearLibTerminal", "FFI", "TUI", "UI"]
categories = ["external-ffi-bindings", "gui", "multimedia"]
license = "MIT"
version = "1.3.0"
authors = ["nabijaczleweli <nabijaczleweli@gmail.com>",
           "Cat Plus Plus <piotrlegnica@piotrl.pl>",
           "Matt Bilker <me@mbilker.us>"]

[dependencies]
libc = "0.2.*"
